@@ -20,6 +20,7 @@ Cacti CHANGELOG
 -bug: Add API Automation tool quietMode to additional functions
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
+-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
 -feature#0001195: add graph title to graphs page
 -feature#0001185: Mass enable/disable graph export per graph from Graph Management
 -feature#0001179: Visual Fix for CACTI Graphs View Interface(list,preview)
